--- a/NoteS/appsettings.json
+++ b/NoteS/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Keycloak": {
+    "server-url": "http://localhost:8080",
+    "audience": "account",
+    "name_claim" : "NoteS",
+    "validate-issuer": true,
+    "require-https": false,
+    "Swagger": {
+        "Client": "swager-api",
+        "Secret": "VRwEkXlojgt5Jt2yv8b040EOBX73ijwt"
+    }
+  }
 }
