--- a/Client/angular/compose.yaml
+++ b/Client/angular/compose.yaml
@@ -3,10 +3,10 @@ services: # https://stackoverflow.com/questions/69052692/right-way-to-configure-
     build: .
     command: sh -c "npm start"
     ports:
-      - 4200:4200
+      - "4200:4200"
     working_dir: /home/node/app
     volumes:
-      - ./:/home/node/app
+      - .:/home/node/app
       - node_modules:/home/node/app/node_modules
 volumes:
   node_modules:
