--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-﻿/.idea
+﻿
 /NoteS/obj/
 /NoteS/bin/
 /NoteS/.idea/
+/NoteS/Folder.DotSettings.user
+
+/.idea
+/bin
+/obj
+NoteS.sln.DotSettings.user
