--- a/compose.yaml
+++ b/compose.yaml
@@ -1,17 +1,40 @@
 services:
-  main-data-base:
+  postgres:
     extends:
       file: db/compose.yaml
-      service: main-data-base
-  keycloak:
+      service: postgres
+  Liquibase:
+    extends:
+      file: db/compose.yaml
+      service: Liquibase
+  keycloak_web:
     extends:
       file: keycloak/compose.yaml
-      service: keycloak
-  elastic:
+      service: keycloak_web
+  keycloak_db:
+    extends:
+      file: keycloak/compose.yaml
+      service: keycloak_db
+  elasticsearch:
     extends:
       file: elastic/compose.yaml
-      service: elastic
-  Client:
+      service: elasticsearch
+  kibana:
     extends:
-      file: Client/compose.yaml
-      service: angular
+      file: elastic/compose.yaml
+      service: kibana
+  headPlugin:
+    extends:
+      file: elastic/compose.yaml
+      service: headPlugin
+  angular:
+    extends:
+      file: Client/angular/compose.yaml
+      service: app
+volumes:
+  postgres_data:
+  esdata1:
+    driver: local
+  node_modules:
+networks:
+  esnet:
