--- a/keycloak/compose.yaml
+++ b/keycloak/compose.yaml
@@ -26,11 +26,11 @@ services:
       KEYCLOAK_IMPORT: /opt/jboss/keycloak/imports/realm-export.json
     command: start-dev
     depends_on:
-      - keycloakdb
+      - keycloak_db
     ports:
       - "8080:8080"
 
-  keycloakdb:
+  keycloak_db:
     image: postgres:15
     volumes:
       - postgres_data:/var/lib/postgresql/data
