--- a/NoteS/appsettings.json
+++ b/NoteS/appsettings.json
@@ -9,6 +9,7 @@
   "Keycloak": {
     "server-url": "http://localhost:8080",
     "audience": "account",
+    "realm": "NoteS",
     "name_claim" : "NoteS",
     "validate-issuer": true,
     "require-https": false,
