--- a/NoteS/appsettings.json
+++ b/NoteS/appsettings.json
@@ -20,5 +20,12 @@
   },
   "Elastic": {
     "server-url": "http://localhost:9200"
+  },
+  "Database": {
+    "host": "localhost",
+    "port": "5432",
+    "db": "NoteS_db",
+    "username": "anyway",
+    "password": "anyway"
   }
 }
