--- a/NoteS/appsettings.json
+++ b/NoteS/appsettings.json
@@ -19,7 +19,7 @@
     }
   },
   "Elastic": {
-    "server-url": "http://localhost:9200"
+    "server-url": "http://clearlaptop:9200"
   },
   "Database": {
     "host": "localhost",
