--- a/NoteS/appsettings.json
+++ b/NoteS/appsettings.json
@@ -19,6 +19,8 @@
     }
   },
   "Elastic": {
+    "index-name": "notes",
+    "model-id": "cointegrated__rubert-tiny2",
     "server-url": "http://clearlaptop:9200"
   },
   "Database": {
