--- a/Client/angular/package.json
+++ b/Client/angular/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "angular.io-example",
+  "name": "NoteS",
   "version": "0.0.0",
-  "description": "Example project from an angular.io guide.",
-  "license": "MIT",
+  "description": "Project for Vuzek",
+  "license": "LGPL-3.0-only",
   "scripts": {
     "ng": "ng",
     "start": "ng serve  --host 0.0.0.0",
@@ -13,23 +13,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "17.2.4",
-    "@angular/common": "17.2.4",
-    "@angular/compiler": "17.2.4",
-    "@angular/core": "17.2.4",
-    "@angular/forms": "17.2.4",
-    "@angular/platform-browser": "17.2.4",
-    "@angular/platform-browser-dynamic": "17.2.4",
-    "@angular/router": "17.2.4",
-    "angular-in-memory-web-api": "~0.17.0",
+    "@angular/animations": "19.0.2",
+    "@angular/common": "19.0.2",
+    "@angular/compiler": "19.0.2",
+    "@angular/core": "19.0.2",
+    "@angular/forms": "19.0.2",
+    "@angular/platform-browser": "19.0.2",
+    "@angular/platform-browser-dynamic": "19.0.2",
+    "@angular/router": "19.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.0"
+    "keycloak-js": "~26.1.2",
+    "keycloak-angular": "19.0.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.2.3",
-    "@angular/cli": "17.2.3",
-    "@angular/compiler-cli": "17.2.4",
+    "@angular-devkit/build-angular": "19.0.2",
+    "@angular/cli": "19.0.2",
+    "@angular/compiler-cli": "19.0.2",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^16.11.35",
     "copyfiles": "^2.4.1",
@@ -43,6 +43,6 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "protractor": "~7.0.0",
     "ts-node": "~10.9.0",
-    "typescript": "~5.2.2"
+    "typescript": "~5.5.4"
   }
 }
