--- a/elastic/compose.yaml
+++ b/elastic/compose.yaml
@@ -37,6 +37,8 @@
     restart: 'no'
     networks:
       - esnet
+    extra_hosts:
+      - "clearlaptop:192.168.1.198"
   kibana:
     image: kibana:8.16.0
     container_name: kibana
@@ -54,6 +56,7 @@
       - '9100:9100'
     networks:
       - esnet
+    
 volumes:
   esdata1:
     driver: local
