--- a/Client/angular/angular.json
+++ b/Client/angular/angular.json
@@ -32,6 +32,11 @@
               "node_modules/prismjs/plugins/line-numbers/prism-line-numbers.css",
               "node_modules/prismjs/plugins/command-line/prism-command-line.css"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/assets/styles"
+              ]
+            },
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
               "node_modules/bootstrap-markdown/js/bootstrap-markdown.js",
